fix: change the session recover to avoid flickering
Change the session recovering to avoid changing routes from /notes to /login during session recovering
Change favicon
Change title to avoid flickering

--- a/app/styles/login.scss
+++ b/app/styles/login.scss
@@ -2,6 +2,7 @@
 
 	width: 100%;
 	text-align: center;
+	color: rgba(0, 0, 0, 0.6);
 
 	span {
 		font-size: 48px;
@@ -135,7 +136,7 @@
 			border: 1px solid #BBB;
 			background-color: rgb(230, 230, 230);
 		}
-		
+
 	}
 
 }
